--- a/src/app/component/affichage/affichage.component.html
+++ b/src/app/component/affichage/affichage.component.html
@@ -60,7 +60,7 @@
       </div>
   </div>
 
-<button class="btn float-right" [routerLink]="['/view']">
+<button class="btn float-right" [routerLink]="['/front/viewYASS']">
   <i class="fa fa-table" aria-hidden="true"></i> View Feedbacks in Table
 </button>
 </div>
